--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,5 +1,5 @@
 name: BungeeWhitelist
 version: '${project.version}'
 main: com.bownetwork.bungeewhitelist.Main
-description: Basic multi-group whitelist.
+description: Advanced group-based whitelist for Bungeecord. Designed for Bow Network.
 author: BowFun
