--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 # Welcome to BungeeWhitelist!
 # This is a plugin to only allow certain groups to log in to the server.
+# Designed for the Bow Network testers.
 
 # Prefix
 # Will be included in most messages
@@ -7,9 +8,12 @@
 Prefix: "§7[§6Bungee§3Whitelist§7]"
 
 # Kick reason
-# This is currently directly coded in.
+# This is used when a player isn't authorized.
+# This is automatically put into red text.
+KickReason: "You aren't in a group, or your group isn't currently allowed. Please contact us if you have any questions."
 
 # Admin Group
+# This group's players can always join.
 # Add player names.
 Admin:
   - "BowFun"
