--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bownetwork</groupId>
     <artifactId>bungeewhitelist</artifactId>
-    <version>DEV-1.0</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>BungeeWhitelist</name>
